// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._1dc4608z,html._1dc4608z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="a7gyu20 _1x7p1y18 _1x7p1y1b">
+        <div class="_1m61nqo0 _1dc46087i _1dc46086e _1dc46089q _1dc46088m _1dc46085e _1x7p1y18 _1x7p1y1b _1dc460832 _1dc460835">
+          <span class="_1m61nqo0 _1dc46084y _1x7p1y0 _1x7p1y1 _1x7p1y21 mowtpn4 _1x7p1yd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1m61nqo0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] ._1m61nqo0 {
  outline: none;
}
._1m61nqo1 {
  display: block;
}
._1m61nqo2 {
  line-height: 1;
}
._1m61nqo3 {
  list-style: none;
}
._1m61nqo4 {
  quotes: none;
}
._1m61nqo4:after,
._1m61nqo4:before {
  content: "";
}
._1m61nqo5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1m61nqo6 {
  -webkit-appearance: none;
  appearance: none;
}
._1m61nqo7 {
  background-color: transparent;
}
._1m61nqo9 {
  color: inherit;
}
._1m61nqoa:disabled {
  opacity: 1;
}
._1m61nqoa::-ms-expand {
  display: none;
}
._1m61nqoc[type="number"] {
  -moz-appearance: textfield;
}
._1m61nqoc[type="number"]::-webkit-inner-spin-button,
._1m61nqoc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1m61nqoc::-ms-clear {
  display: none;
}
._1m61nqoc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1m61nqof {
  color: inherit;
  text-decoration: none;
}
._1dc46080 {
  overflow: hidden;
}
._1dc46081 {
  overflow: scroll;
}
._1dc46082 {
  overflow: visible;
}
._1dc46083 {
  overflow: auto;
}
._1dc46084 {
  -webkit-user-select: none;
  user-select: none;
}
._1dc46085 {
  outline: none;
}
._1dc46086 {
  opacity: 0;
}
._1dc46087 {
  z-index: 0;
}
._1dc46088 {
  z-index: 1;
}
._1dc46089 {
  z-index: 2;
}
._1dc4608a {
  z-index: 90;
}
._1dc4608b {
  z-index: 100;
}
._1dc4608c {
  z-index: 200;
}
._1dc4608d {
  z-index: 290;
}
._1dc4608e {
  z-index: 300;
}
._1dc4608f {
  z-index: 400;
}
._1dc4608g {
  cursor: default;
}
._1dc4608h {
  cursor: pointer;
}
._1dc4608i {
  pointer-events: none;
}
._1dc4608j {
  top: 0;
}
._1dc4608k {
  bottom: 0;
}
._1dc4608l {
  left: 0;
}
._1dc4608m {
  right: 0;
}
._1dc4608n {
  height: 100%;
}
._1dc4608o {
  height: var(--ht9uok9);
}
._1dc4608p {
  width: 100%;
}
._1dc4608q {
  width: var(--ht9uok9);
}
._1dc4608r {
  min-width: 0;
}
._1dc4608s {
  max-width: var(--ht9uok11);
}
._1dc4608t {
  max-width: var(--ht9uok12);
}
._1dc4608u {
  max-width: var(--ht9uok13);
}
._1dc4608v {
  max-width: var(--ht9uok14);
}
._1dc4608w {
  transition: var(--ht9uok5i);
}
._1dc4608x {
  transition: var(--ht9uok5j);
}
._1dc4608y:active {
  transform: var(--ht9uok5k);
}
html._1dc4608z ._1dc460811,
html:not(._1dc4608z) ._1dc460810 {
  background: var(--ht9uok1t);
}
html._1dc4608z ._1dc460813,
html:not(._1dc4608z) ._1dc460812 {
  background: var(--ht9uok1u);
}
html._1dc4608z ._1dc460815,
html:not(._1dc4608z) ._1dc460814 {
  background: var(--ht9uok1v);
}
html._1dc4608z ._1dc460817,
html:not(._1dc4608z) ._1dc460816 {
  background: var(--ht9uok1w);
}
html._1dc4608z ._1dc460819,
html:not(._1dc4608z) ._1dc460818 {
  background: var(--ht9uok1x);
}
html._1dc4608z ._1dc46081b,
html:not(._1dc4608z) ._1dc46081a {
  background: var(--ht9uok1y);
}
html._1dc4608z ._1dc46081d,
html:not(._1dc4608z) ._1dc46081c {
  background: var(--ht9uok1z);
}
html._1dc4608z ._1dc46081f,
html:not(._1dc4608z) ._1dc46081e {
  background: var(--ht9uok20);
}
html._1dc4608z ._1dc46081h,
html:not(._1dc4608z) ._1dc46081g {
  background: var(--ht9uok21);
}
html._1dc4608z ._1dc46081j,
html:not(._1dc4608z) ._1dc46081i {
  background: var(--ht9uok22);
}
html._1dc4608z ._1dc46081l,
html:not(._1dc4608z) ._1dc46081k {
  background: var(--ht9uok23);
}
html._1dc4608z ._1dc46081n,
html:not(._1dc4608z) ._1dc46081m {
  background: var(--ht9uok24);
}
html._1dc4608z ._1dc46081p,
html:not(._1dc4608z) ._1dc46081o {
  background: var(--ht9uok25);
}
html._1dc4608z ._1dc46081r,
html:not(._1dc4608z) ._1dc46081q {
  background: var(--ht9uok26);
}
html._1dc4608z ._1dc46081t,
html:not(._1dc4608z) ._1dc46081s {
  background: var(--ht9uok27);
}
html._1dc4608z ._1dc46081v,
html:not(._1dc4608z) ._1dc46081u {
  background: var(--ht9uok28);
}
html._1dc4608z ._1dc46081x,
html:not(._1dc4608z) ._1dc46081w {
  background: var(--ht9uok29);
}
html._1dc4608z ._1dc46081z,
html:not(._1dc4608z) ._1dc46081y {
  background: var(--ht9uok2a);
}
html._1dc4608z ._1dc460821,
html:not(._1dc4608z) ._1dc460820 {
  background: var(--ht9uok2b);
}
html._1dc4608z ._1dc460823,
html:not(._1dc4608z) ._1dc460822 {
  background: var(--ht9uok2c);
}
html._1dc4608z ._1dc460825,
html:not(._1dc4608z) ._1dc460824 {
  background: var(--ht9uok2d);
}
html._1dc4608z ._1dc460827,
html:not(._1dc4608z) ._1dc460826 {
  background: var(--ht9uok2e);
}
html._1dc4608z ._1dc460829,
html:not(._1dc4608z) ._1dc460828 {
  background: var(--ht9uok2f);
}
html._1dc4608z ._1dc46082b,
html:not(._1dc4608z) ._1dc46082a {
  background: var(--ht9uok2g);
}
html._1dc4608z ._1dc46082d,
html:not(._1dc4608z) ._1dc46082c {
  background: var(--ht9uok2h);
}
html._1dc4608z ._1dc46082f,
html:not(._1dc4608z) ._1dc46082e {
  background: var(--ht9uok2i);
}
html._1dc4608z ._1dc46082h,
html:not(._1dc4608z) ._1dc46082g {
  background: var(--ht9uok2j);
}
html._1dc4608z ._1dc46082j,
html:not(._1dc4608z) ._1dc46082i {
  background: var(--ht9uok2k);
}
html._1dc4608z ._1dc46082l,
html:not(._1dc4608z) ._1dc46082k {
  background: var(--ht9uok2l);
}
html._1dc4608z ._1dc46082n,
html:not(._1dc4608z) ._1dc46082m {
  background: var(--ht9uok2m);
}
html._1dc4608z ._1dc46082p,
html:not(._1dc4608z) ._1dc46082o {
  background: var(--ht9uok2n);
}
html._1dc4608z ._1dc46082r,
html:not(._1dc4608z) ._1dc46082q {
  background: var(--ht9uok2o);
}
html._1dc4608z ._1dc46082t,
html:not(._1dc4608z) ._1dc46082s {
  background: var(--ht9uok2p);
}
html._1dc4608z ._1dc46082v,
html:not(._1dc4608z) ._1dc46082u {
  background: var(--ht9uok2q);
}
html._1dc4608z ._1dc46082x,
html:not(._1dc4608z) ._1dc46082w {
  background: var(--ht9uok2r);
}
html._1dc4608z ._1dc46082z,
html:not(._1dc4608z) ._1dc46082y {
  background: var(--ht9uok2s);
}
html._1dc4608z ._1dc460831,
html:not(._1dc4608z) ._1dc460830 {
  background: var(--ht9uok2t);
}
html._1dc4608z ._1dc460833,
html:not(._1dc4608z) ._1dc460832 {
  background: var(--ht9uok2u);
}
html._1dc4608z ._1dc460835,
html:not(._1dc4608z) ._1dc460834 {
  background: var(--ht9uok2v);
}
html._1dc4608z ._1dc460837,
html:not(._1dc4608z) ._1dc460836 {
  box-shadow: var(--ht9uok5l);
}
html._1dc4608z ._1dc460839,
html:not(._1dc4608z) ._1dc460838 {
  box-shadow: var(--ht9uok5m);
}
html._1dc4608z ._1dc46083b,
html:not(._1dc4608z) ._1dc46083a {
  box-shadow: var(--ht9uok5n);
}
html._1dc4608z ._1dc46083d,
html:not(._1dc4608z) ._1dc46083c {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokf);
}
html._1dc4608z ._1dc46083f,
html:not(._1dc4608z) ._1dc46083e {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokg);
}
html._1dc4608z ._1dc46083h,
html:not(._1dc4608z) ._1dc46083g {
  box-shadow: inset 0 0 0 var(--ht9uokz) var(--ht9uokf);
}
html._1dc4608z ._1dc46083j,
html:not(._1dc4608z) ._1dc46083i {
  box-shadow: inset 0 0 0 var(--ht9uokz) var(--ht9uokg);
}
html._1dc4608z ._1dc46083l,
html:not(._1dc4608z) ._1dc46083k {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokh);
}
html._1dc4608z ._1dc46083n,
html:not(._1dc4608z) ._1dc46083m {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uoki);
}
html._1dc4608z ._1dc46083p,
html:not(._1dc4608z) ._1dc46083o {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokj);
}
html._1dc4608z ._1dc46083r,
html:not(._1dc4608z) ._1dc46083q {
  box-shadow: inset 0 0 0 var(--ht9uokz) var(--ht9uokj);
}
html._1dc4608z ._1dc46083t,
html:not(._1dc4608z) ._1dc46083s {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokk);
}
html._1dc4608z ._1dc46083v,
html:not(._1dc4608z) ._1dc46083u {
  box-shadow: inset 0 0 0 var(--ht9uokz) var(--ht9uokk);
}
html._1dc4608z ._1dc46083x,
html:not(._1dc4608z) ._1dc46083w {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokl);
}
html._1dc4608z ._1dc46083z,
html:not(._1dc4608z) ._1dc46083y {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokn);
}
html._1dc4608z ._1dc460841,
html:not(._1dc4608z) ._1dc460840 {
  box-shadow: inset 0 0 0 var(--ht9uokz) var(--ht9uokn);
}
html._1dc4608z ._1dc460843,
html:not(._1dc4608z) ._1dc460842 {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uoko);
}
html._1dc4608z ._1dc460845,
html:not(._1dc4608z) ._1dc460844 {
  box-shadow: inset 0 0 0 var(--ht9uokz) var(--ht9uoko);
}
html._1dc4608z ._1dc460847,
html:not(._1dc4608z) ._1dc460846 {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokp);
}
html._1dc4608z ._1dc460849,
html:not(._1dc4608z) ._1dc460848 {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokq);
}
html._1dc4608z ._1dc46084b,
html:not(._1dc4608z) ._1dc46084a {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokr);
}
html._1dc4608z ._1dc46084d,
html:not(._1dc4608z) ._1dc46084c {
  box-shadow: inset 0 0 0 var(--ht9uokz) var(--ht9uokr);
}
html._1dc4608z ._1dc46084f,
html:not(._1dc4608z) ._1dc46084e {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uoks);
}
html._1dc4608z ._1dc46084h,
html:not(._1dc4608z) ._1dc46084g {
  box-shadow: inset 0 0 0 var(--ht9uokz) var(--ht9uoks);
}
html._1dc4608z ._1dc46084j,
html:not(._1dc4608z) ._1dc46084i {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokt);
}
html._1dc4608z ._1dc46084l,
html:not(._1dc4608z) ._1dc46084k {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uoku);
}
html._1dc4608z ._1dc46084n,
html:not(._1dc4608z) ._1dc46084m {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokv);
}
html._1dc4608z ._1dc46084p,
html:not(._1dc4608z) ._1dc46084o {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokw);
}
html._1dc4608z ._1dc46084r,
html:not(._1dc4608z) ._1dc46084q {
  box-shadow: inset 0 0 0 var(--ht9uoky) var(--ht9uokx);
}
html._1dc4608z ._1dc46084t,
html:not(._1dc4608z) ._1dc46084s {
  box-shadow: 0 0 0 var(--ht9uok10) var(--ht9uokm);
}
._1dc46084u {
  display: none;
}
._1dc46084y {
  display: block;
}
._1dc460852 {
  display: inline;
}
._1dc460856 {
  display: inline-block;
}
._1dc46085a {
  display: flex;
}
._1dc46085e {
  position: relative;
}
._1dc46085i {
  position: absolute;
}
._1dc46085m {
  position: fixed;
}
._1dc46085q {
  border-radius: 0;
}
._1dc46085u {
  border-radius: 9999px;
}
._1dc46085y {
  border-radius: var(--ht9uokb);
}
._1dc460862 {
  border-radius: var(--ht9uokc);
}
._1dc460866 {
  border-radius: var(--ht9uokd);
}
._1dc46086a {
  border-radius: var(--ht9uoke);
}
._1dc46086e {
  padding-top: var(--ht9uok0);
}
._1dc46086i {
  padding-top: var(--ht9uok1);
}
._1dc46086m {
  padding-top: var(--ht9uok2);
}
._1dc46086q {
  padding-top: var(--ht9uok3);
}
._1dc46086u {
  padding-top: var(--ht9uok4);
}
._1dc46086y {
  padding-top: var(--ht9uok5);
}
._1dc460872 {
  padding-top: var(--ht9uok6);
}
._1dc460876 {
  padding-top: var(--ht9uok7);
}
._1dc46087a {
  padding-top: var(--ht9uok8);
}
._1dc46087e {
  padding-top: 0;
}
._1dc46087i {
  padding-bottom: var(--ht9uok0);
}
._1dc46087m {
  padding-bottom: var(--ht9uok1);
}
._1dc46087q {
  padding-bottom: var(--ht9uok2);
}
._1dc46087u {
  padding-bottom: var(--ht9uok3);
}
._1dc46087y {
  padding-bottom: var(--ht9uok4);
}
._1dc460882 {
  padding-bottom: var(--ht9uok5);
}
._1dc460886 {
  padding-bottom: var(--ht9uok6);
}
._1dc46088a {
  padding-bottom: var(--ht9uok7);
}
._1dc46088e {
  padding-bottom: var(--ht9uok8);
}
._1dc46088i {
  padding-bottom: 0;
}
._1dc46088m {
  padding-right: var(--ht9uok0);
}
._1dc46088q {
  padding-right: var(--ht9uok1);
}
._1dc46088u {
  padding-right: var(--ht9uok2);
}
._1dc46088y {
  padding-right: var(--ht9uok3);
}
._1dc460892 {
  padding-right: var(--ht9uok4);
}
._1dc460896 {
  padding-right: var(--ht9uok5);
}
._1dc46089a {
  padding-right: var(--ht9uok6);
}
._1dc46089e {
  padding-right: var(--ht9uok7);
}
._1dc46089i {
  padding-right: var(--ht9uok8);
}
._1dc46089m {
  padding-right: 0;
}
._1dc46089q {
  padding-left: var(--ht9uok0);
}
._1dc46089u {
  padding-left: var(--ht9uok1);
}
._1dc46089y {
  padding-left: var(--ht9uok2);
}
._1dc4608a2 {
  padding-left: var(--ht9uok3);
}
._1dc4608a6 {
  padding-left: var(--ht9uok4);
}
._1dc4608aa {
  padding-left: var(--ht9uok5);
}
._1dc4608ae {
  padding-left: var(--ht9uok6);
}
._1dc4608ai {
  padding-left: var(--ht9uok7);
}
._1dc4608am {
  padding-left: var(--ht9uok8);
}
._1dc4608aq {
  padding-left: 0;
}
._1dc4608au {
  margin-top: var(--ht9uok0);
}
._1dc4608ay {
  margin-top: var(--ht9uok1);
}
._1dc4608b2 {
  margin-top: var(--ht9uok2);
}
._1dc4608b6 {
  margin-top: var(--ht9uok3);
}
._1dc4608ba {
  margin-top: var(--ht9uok4);
}
._1dc4608be {
  margin-top: var(--ht9uok5);
}
._1dc4608bi {
  margin-top: var(--ht9uok6);
}
._1dc4608bm {
  margin-top: var(--ht9uok7);
}
._1dc4608bq {
  margin-top: var(--ht9uok8);
}
._1dc4608bu {
  margin-top: 0;
}
._1dc4608by {
  margin-bottom: var(--ht9uok0);
}
._1dc4608c2 {
  margin-bottom: var(--ht9uok1);
}
._1dc4608c6 {
  margin-bottom: var(--ht9uok2);
}
._1dc4608ca {
  margin-bottom: var(--ht9uok3);
}
._1dc4608ce {
  margin-bottom: var(--ht9uok4);
}
._1dc4608ci {
  margin-bottom: var(--ht9uok5);
}
._1dc4608cm {
  margin-bottom: var(--ht9uok6);
}
._1dc4608cq {
  margin-bottom: var(--ht9uok7);
}
._1dc4608cu {
  margin-bottom: var(--ht9uok8);
}
._1dc4608cy {
  margin-bottom: 0;
}
._1dc4608d2 {
  margin-right: var(--ht9uok0);
}
._1dc4608d6 {
  margin-right: var(--ht9uok1);
}
._1dc4608da {
  margin-right: var(--ht9uok2);
}
._1dc4608de {
  margin-right: var(--ht9uok3);
}
._1dc4608di {
  margin-right: var(--ht9uok4);
}
._1dc4608dm {
  margin-right: var(--ht9uok5);
}
._1dc4608dq {
  margin-right: var(--ht9uok6);
}
._1dc4608du {
  margin-right: var(--ht9uok7);
}
._1dc4608dy {
  margin-right: var(--ht9uok8);
}
._1dc4608e2 {
  margin-right: 0;
}
._1dc4608e6 {
  margin-left: var(--ht9uok0);
}
._1dc4608ea {
  margin-left: var(--ht9uok1);
}
._1dc4608ee {
  margin-left: var(--ht9uok2);
}
._1dc4608ei {
  margin-left: var(--ht9uok3);
}
._1dc4608em {
  margin-left: var(--ht9uok4);
}
._1dc4608eq {
  margin-left: var(--ht9uok5);
}
._1dc4608eu {
  margin-left: var(--ht9uok6);
}
._1dc4608ey {
  margin-left: var(--ht9uok7);
}
._1dc4608f2 {
  margin-left: var(--ht9uok8);
}
._1dc4608f6 {
  margin-left: 0;
}
._1dc4608fa {
  align-items: flex-start;
}
._1dc4608fe {
  align-items: center;
}
._1dc4608fi {
  align-items: flex-end;
}
._1dc4608fm {
  justify-content: flex-start;
}
._1dc4608fq {
  justify-content: center;
}
._1dc4608fu {
  justify-content: flex-end;
}
._1dc4608fy {
  justify-content: space-between;
}
._1dc4608g2 {
  flex-direction: row;
}
._1dc4608g6 {
  flex-direction: row-reverse;
}
._1dc4608ga {
  flex-direction: column;
}
._1dc4608ge {
  flex-direction: column-reverse;
}
._1dc4608gi {
  flex-wrap: wrap;
}
._1dc4608gm {
  flex-wrap: nowrap;
}
._1dc4608gq {
  flex-shrink: 0;
}
._1dc4608gu {
  flex-grow: 0;
}
._1dc4608gy {
  flex-grow: 1;
}
._1dc4608h2 {
  text-align: left;
}
._1dc4608h6 {
  text-align: center;
}
._1dc4608ha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1dc46084v {
    display: none;
  }
  ._1dc46084z {
    display: block;
  }
  ._1dc460853 {
    display: inline;
  }
  ._1dc460857 {
    display: inline-block;
  }
  ._1dc46085b {
    display: flex;
  }
  ._1dc46085f {
    position: relative;
  }
  ._1dc46085j {
    position: absolute;
  }
  ._1dc46085n {
    position: fixed;
  }
  ._1dc46085r {
    border-radius: 0;
  }
  ._1dc46085v {
    border-radius: 9999px;
  }
  ._1dc46085z {
    border-radius: var(--ht9uokb);
  }
  ._1dc460863 {
    border-radius: var(--ht9uokc);
  }
  ._1dc460867 {
    border-radius: var(--ht9uokd);
  }
  ._1dc46086b {
    border-radius: var(--ht9uoke);
  }
  ._1dc46086f {
    padding-top: var(--ht9uok0);
  }
  ._1dc46086j {
    padding-top: var(--ht9uok1);
  }
  ._1dc46086n {
    padding-top: var(--ht9uok2);
  }
  ._1dc46086r {
    padding-top: var(--ht9uok3);
  }
  ._1dc46086v {
    padding-top: var(--ht9uok4);
  }
  ._1dc46086z {
    padding-top: var(--ht9uok5);
  }
  ._1dc460873 {
    padding-top: var(--ht9uok6);
  }
  ._1dc460877 {
    padding-top: var(--ht9uok7);
  }
  ._1dc46087b {
    padding-top: var(--ht9uok8);
  }
  ._1dc46087f {
    padding-top: 0;
  }
  ._1dc46087j {
    padding-bottom: var(--ht9uok0);
  }
  ._1dc46087n {
    padding-bottom: var(--ht9uok1);
  }
  ._1dc46087r {
    padding-bottom: var(--ht9uok2);
  }
  ._1dc46087v {
    padding-bottom: var(--ht9uok3);
  }
  ._1dc46087z {
    padding-bottom: var(--ht9uok4);
  }
  ._1dc460883 {
    padding-bottom: var(--ht9uok5);
  }
  ._1dc460887 {
    padding-bottom: var(--ht9uok6);
  }
  ._1dc46088b {
    padding-bottom: var(--ht9uok7);
  }
  ._1dc46088f {
    padding-bottom: var(--ht9uok8);
  }
  ._1dc46088j {
    padding-bottom: 0;
  }
  ._1dc46088n {
    padding-right: var(--ht9uok0);
  }
  ._1dc46088r {
    padding-right: var(--ht9uok1);
  }
  ._1dc46088v {
    padding-right: var(--ht9uok2);
  }
  ._1dc46088z {
    padding-right: var(--ht9uok3);
  }
  ._1dc460893 {
    padding-right: var(--ht9uok4);
  }
  ._1dc460897 {
    padding-right: var(--ht9uok5);
  }
  ._1dc46089b {
    padding-right: var(--ht9uok6);
  }
  ._1dc46089f {
    padding-right: var(--ht9uok7);
  }
  ._1dc46089j {
    padding-right: var(--ht9uok8);
  }
  ._1dc46089n {
    padding-right: 0;
  }
  ._1dc46089r {
    padding-left: var(--ht9uok0);
  }
  ._1dc46089v {
    padding-left: var(--ht9uok1);
  }
  ._1dc46089z {
    padding-left: var(--ht9uok2);
  }
  ._1dc4608a3 {
    padding-left: var(--ht9uok3);
  }
  ._1dc4608a7 {
    padding-left: var(--ht9uok4);
  }
  ._1dc4608ab {
    padding-left: var(--ht9uok5);
  }
  ._1dc4608af {
    padding-left: var(--ht9uok6);
  }
  ._1dc4608aj {
    padding-left: var(--ht9uok7);
  }
  ._1dc4608an {
    padding-left: var(--ht9uok8);
  }
  ._1dc4608ar {
    padding-left: 0;
  }
  ._1dc4608av {
    margin-top: var(--ht9uok0);
  }
  ._1dc4608az {
    margin-top: var(--ht9uok1);
  }
  ._1dc4608b3 {
    margin-top: var(--ht9uok2);
  }
  ._1dc4608b7 {
    margin-top: var(--ht9uok3);
  }
  ._1dc4608bb {
    margin-top: var(--ht9uok4);
  }
  ._1dc4608bf {
    margin-top: var(--ht9uok5);
  }
  ._1dc4608bj {
    margin-top: var(--ht9uok6);
  }
  ._1dc4608bn {
    margin-top: var(--ht9uok7);
  }
  ._1dc4608br {
    margin-top: var(--ht9uok8);
  }
  ._1dc4608bv {
    margin-top: 0;
  }
  ._1dc4608bz {
    margin-bottom: var(--ht9uok0);
  }
  ._1dc4608c3 {
    margin-bottom: var(--ht9uok1);
  }
  ._1dc4608c7 {
    margin-bottom: var(--ht9uok2);
  }
  ._1dc4608cb {
    margin-bottom: var(--ht9uok3);
  }
  ._1dc4608cf {
    margin-bottom: var(--ht9uok4);
  }
  ._1dc4608cj {
    margin-bottom: var(--ht9uok5);
  }
  ._1dc4608cn {
    margin-bottom: var(--ht9uok6);
  }
  ._1dc4608cr {
    margin-bottom: var(--ht9uok7);
  }
  ._1dc4608cv {
    margin-bottom: var(--ht9uok8);
  }
  ._1dc4608cz {
    margin-bottom: 0;
  }
  ._1dc4608d3 {
    margin-right: var(--ht9uok0);
  }
  ._1dc4608d7 {
    margin-right: var(--ht9uok1);
  }
  ._1dc4608db {
    margin-right: var(--ht9uok2);
  }
  ._1dc4608df {
    margin-right: var(--ht9uok3);
  }
  ._1dc4608dj {
    margin-right: var(--ht9uok4);
  }
  ._1dc4608dn {
    margin-right: var(--ht9uok5);
  }
  ._1dc4608dr {
    margin-right: var(--ht9uok6);
  }
  ._1dc4608dv {
    margin-right: var(--ht9uok7);
  }
  ._1dc4608dz {
    margin-right: var(--ht9uok8);
  }
  ._1dc4608e3 {
    margin-right: 0;
  }
  ._1dc4608e7 {
    margin-left: var(--ht9uok0);
  }
  ._1dc4608eb {
    margin-left: var(--ht9uok1);
  }
  ._1dc4608ef {
    margin-left: var(--ht9uok2);
  }
  ._1dc4608ej {
    margin-left: var(--ht9uok3);
  }
  ._1dc4608en {
    margin-left: var(--ht9uok4);
  }
  ._1dc4608er {
    margin-left: var(--ht9uok5);
  }
  ._1dc4608ev {
    margin-left: var(--ht9uok6);
  }
  ._1dc4608ez {
    margin-left: var(--ht9uok7);
  }
  ._1dc4608f3 {
    margin-left: var(--ht9uok8);
  }
  ._1dc4608f7 {
    margin-left: 0;
  }
  ._1dc4608fb {
    align-items: flex-start;
  }
  ._1dc4608ff {
    align-items: center;
  }
  ._1dc4608fj {
    align-items: flex-end;
  }
  ._1dc4608fn {
    justify-content: flex-start;
  }
  ._1dc4608fr {
    justify-content: center;
  }
  ._1dc4608fv {
    justify-content: flex-end;
  }
  ._1dc4608fz {
    justify-content: space-between;
  }
  ._1dc4608g3 {
    flex-direction: row;
  }
  ._1dc4608g7 {
    flex-direction: row-reverse;
  }
  ._1dc4608gb {
    flex-direction: column;
  }
  ._1dc4608gf {
    flex-direction: column-reverse;
  }
  ._1dc4608gj {
    flex-wrap: wrap;
  }
  ._1dc4608gn {
    flex-wrap: nowrap;
  }
  ._1dc4608gr {
    flex-shrink: 0;
  }
  ._1dc4608gv {
    flex-grow: 0;
  }
  ._1dc4608gz {
    flex-grow: 1;
  }
  ._1dc4608h3 {
    text-align: left;
  }
  ._1dc4608h7 {
    text-align: center;
  }
  ._1dc4608hb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1dc46084w {
    display: none;
  }
  ._1dc460850 {
    display: block;
  }
  ._1dc460854 {
    display: inline;
  }
  ._1dc460858 {
    display: inline-block;
  }
  ._1dc46085c {
    display: flex;
  }
  ._1dc46085g {
    position: relative;
  }
  ._1dc46085k {
    position: absolute;
  }
  ._1dc46085o {
    position: fixed;
  }
  ._1dc46085s {
    border-radius: 0;
  }
  ._1dc46085w {
    border-radius: 9999px;
  }
  ._1dc460860 {
    border-radius: var(--ht9uokb);
  }
  ._1dc460864 {
    border-radius: var(--ht9uokc);
  }
  ._1dc460868 {
    border-radius: var(--ht9uokd);
  }
  ._1dc46086c {
    border-radius: var(--ht9uoke);
  }
  ._1dc46086g {
    padding-top: var(--ht9uok0);
  }
  ._1dc46086k {
    padding-top: var(--ht9uok1);
  }
  ._1dc46086o {
    padding-top: var(--ht9uok2);
  }
  ._1dc46086s {
    padding-top: var(--ht9uok3);
  }
  ._1dc46086w {
    padding-top: var(--ht9uok4);
  }
  ._1dc460870 {
    padding-top: var(--ht9uok5);
  }
  ._1dc460874 {
    padding-top: var(--ht9uok6);
  }
  ._1dc460878 {
    padding-top: var(--ht9uok7);
  }
  ._1dc46087c {
    padding-top: var(--ht9uok8);
  }
  ._1dc46087g {
    padding-top: 0;
  }
  ._1dc46087k {
    padding-bottom: var(--ht9uok0);
  }
  ._1dc46087o {
    padding-bottom: var(--ht9uok1);
  }
  ._1dc46087s {
    padding-bottom: var(--ht9uok2);
  }
  ._1dc46087w {
    padding-bottom: var(--ht9uok3);
  }
  ._1dc460880 {
    padding-bottom: var(--ht9uok4);
  }
  ._1dc460884 {
    padding-bottom: var(--ht9uok5);
  }
  ._1dc460888 {
    padding-bottom: var(--ht9uok6);
  }
  ._1dc46088c {
    padding-bottom: var(--ht9uok7);
  }
  ._1dc46088g {
    padding-bottom: var(--ht9uok8);
  }
  ._1dc46088k {
    padding-bottom: 0;
  }
  ._1dc46088o {
    padding-right: var(--ht9uok0);
  }
  ._1dc46088s {
    padding-right: var(--ht9uok1);
  }
  ._1dc46088w {
    padding-right: var(--ht9uok2);
  }
  ._1dc460890 {
    padding-right: var(--ht9uok3);
  }
  ._1dc460894 {
    padding-right: var(--ht9uok4);
  }
  ._1dc460898 {
    padding-right: var(--ht9uok5);
  }
  ._1dc46089c {
    padding-right: var(--ht9uok6);
  }
  ._1dc46089g {
    padding-right: var(--ht9uok7);
  }
  ._1dc46089k {
    padding-right: var(--ht9uok8);
  }
  ._1dc46089o {
    padding-right: 0;
  }
  ._1dc46089s {
    padding-left: var(--ht9uok0);
  }
  ._1dc46089w {
    padding-left: var(--ht9uok1);
  }
  ._1dc4608a0 {
    padding-left: var(--ht9uok2);
  }
  ._1dc4608a4 {
    padding-left: var(--ht9uok3);
  }
  ._1dc4608a8 {
    padding-left: var(--ht9uok4);
  }
  ._1dc4608ac {
    padding-left: var(--ht9uok5);
  }
  ._1dc4608ag {
    padding-left: var(--ht9uok6);
  }
  ._1dc4608ak {
    padding-left: var(--ht9uok7);
  }
  ._1dc4608ao {
    padding-left: var(--ht9uok8);
  }
  ._1dc4608as {
    padding-left: 0;
  }
  ._1dc4608aw {
    margin-top: var(--ht9uok0);
  }
  ._1dc4608b0 {
    margin-top: var(--ht9uok1);
  }
  ._1dc4608b4 {
    margin-top: var(--ht9uok2);
  }
  ._1dc4608b8 {
    margin-top: var(--ht9uok3);
  }
  ._1dc4608bc {
    margin-top: var(--ht9uok4);
  }
  ._1dc4608bg {
    margin-top: var(--ht9uok5);
  }
  ._1dc4608bk {
    margin-top: var(--ht9uok6);
  }
  ._1dc4608bo {
    margin-top: var(--ht9uok7);
  }
  ._1dc4608bs {
    margin-top: var(--ht9uok8);
  }
  ._1dc4608bw {
    margin-top: 0;
  }
  ._1dc4608c0 {
    margin-bottom: var(--ht9uok0);
  }
  ._1dc4608c4 {
    margin-bottom: var(--ht9uok1);
  }
  ._1dc4608c8 {
    margin-bottom: var(--ht9uok2);
  }
  ._1dc4608cc {
    margin-bottom: var(--ht9uok3);
  }
  ._1dc4608cg {
    margin-bottom: var(--ht9uok4);
  }
  ._1dc4608ck {
    margin-bottom: var(--ht9uok5);
  }
  ._1dc4608co {
    margin-bottom: var(--ht9uok6);
  }
  ._1dc4608cs {
    margin-bottom: var(--ht9uok7);
  }
  ._1dc4608cw {
    margin-bottom: var(--ht9uok8);
  }
  ._1dc4608d0 {
    margin-bottom: 0;
  }
  ._1dc4608d4 {
    margin-right: var(--ht9uok0);
  }
  ._1dc4608d8 {
    margin-right: var(--ht9uok1);
  }
  ._1dc4608dc {
    margin-right: var(--ht9uok2);
  }
  ._1dc4608dg {
    margin-right: var(--ht9uok3);
  }
  ._1dc4608dk {
    margin-right: var(--ht9uok4);
  }
  ._1dc4608do {
    margin-right: var(--ht9uok5);
  }
  ._1dc4608ds {
    margin-right: var(--ht9uok6);
  }
  ._1dc4608dw {
    margin-right: var(--ht9uok7);
  }
  ._1dc4608e0 {
    margin-right: var(--ht9uok8);
  }
  ._1dc4608e4 {
    margin-right: 0;
  }
  ._1dc4608e8 {
    margin-left: var(--ht9uok0);
  }
  ._1dc4608ec {
    margin-left: var(--ht9uok1);
  }
  ._1dc4608eg {
    margin-left: var(--ht9uok2);
  }
  ._1dc4608ek {
    margin-left: var(--ht9uok3);
  }
  ._1dc4608eo {
    margin-left: var(--ht9uok4);
  }
  ._1dc4608es {
    margin-left: var(--ht9uok5);
  }
  ._1dc4608ew {
    margin-left: var(--ht9uok6);
  }
  ._1dc4608f0 {
    margin-left: var(--ht9uok7);
  }
  ._1dc4608f4 {
    margin-left: var(--ht9uok8);
  }
  ._1dc4608f8 {
    margin-left: 0;
  }
  ._1dc4608fc {
    align-items: flex-start;
  }
  ._1dc4608fg {
    align-items: center;
  }
  ._1dc4608fk {
    align-items: flex-end;
  }
  ._1dc4608fo {
    justify-content: flex-start;
  }
  ._1dc4608fs {
    justify-content: center;
  }
  ._1dc4608fw {
    justify-content: flex-end;
  }
  ._1dc4608g0 {
    justify-content: space-between;
  }
  ._1dc4608g4 {
    flex-direction: row;
  }
  ._1dc4608g8 {
    flex-direction: row-reverse;
  }
  ._1dc4608gc {
    flex-direction: column;
  }
  ._1dc4608gg {
    flex-direction: column-reverse;
  }
  ._1dc4608gk {
    flex-wrap: wrap;
  }
  ._1dc4608go {
    flex-wrap: nowrap;
  }
  ._1dc4608gs {
    flex-shrink: 0;
  }
  ._1dc4608gw {
    flex-grow: 0;
  }
  ._1dc4608h0 {
    flex-grow: 1;
  }
  ._1dc4608h4 {
    text-align: left;
  }
  ._1dc4608h8 {
    text-align: center;
  }
  ._1dc4608hc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1dc46084x {
    display: none;
  }
  ._1dc460851 {
    display: block;
  }
  ._1dc460855 {
    display: inline;
  }
  ._1dc460859 {
    display: inline-block;
  }
  ._1dc46085d {
    display: flex;
  }
  ._1dc46085h {
    position: relative;
  }
  ._1dc46085l {
    position: absolute;
  }
  ._1dc46085p {
    position: fixed;
  }
  ._1dc46085t {
    border-radius: 0;
  }
  ._1dc46085x {
    border-radius: 9999px;
  }
  ._1dc460861 {
    border-radius: var(--ht9uokb);
  }
  ._1dc460865 {
    border-radius: var(--ht9uokc);
  }
  ._1dc460869 {
    border-radius: var(--ht9uokd);
  }
  ._1dc46086d {
    border-radius: var(--ht9uoke);
  }
  ._1dc46086h {
    padding-top: var(--ht9uok0);
  }
  ._1dc46086l {
    padding-top: var(--ht9uok1);
  }
  ._1dc46086p {
    padding-top: var(--ht9uok2);
  }
  ._1dc46086t {
    padding-top: var(--ht9uok3);
  }
  ._1dc46086x {
    padding-top: var(--ht9uok4);
  }
  ._1dc460871 {
    padding-top: var(--ht9uok5);
  }
  ._1dc460875 {
    padding-top: var(--ht9uok6);
  }
  ._1dc460879 {
    padding-top: var(--ht9uok7);
  }
  ._1dc46087d {
    padding-top: var(--ht9uok8);
  }
  ._1dc46087h {
    padding-top: 0;
  }
  ._1dc46087l {
    padding-bottom: var(--ht9uok0);
  }
  ._1dc46087p {
    padding-bottom: var(--ht9uok1);
  }
  ._1dc46087t {
    padding-bottom: var(--ht9uok2);
  }
  ._1dc46087x {
    padding-bottom: var(--ht9uok3);
  }
  ._1dc460881 {
    padding-bottom: var(--ht9uok4);
  }
  ._1dc460885 {
    padding-bottom: var(--ht9uok5);
  }
  ._1dc460889 {
    padding-bottom: var(--ht9uok6);
  }
  ._1dc46088d {
    padding-bottom: var(--ht9uok7);
  }
  ._1dc46088h {
    padding-bottom: var(--ht9uok8);
  }
  ._1dc46088l {
    padding-bottom: 0;
  }
  ._1dc46088p {
    padding-right: var(--ht9uok0);
  }
  ._1dc46088t {
    padding-right: var(--ht9uok1);
  }
  ._1dc46088x {
    padding-right: var(--ht9uok2);
  }
  ._1dc460891 {
    padding-right: var(--ht9uok3);
  }
  ._1dc460895 {
    padding-right: var(--ht9uok4);
  }
  ._1dc460899 {
    padding-right: var(--ht9uok5);
  }
  ._1dc46089d {
    padding-right: var(--ht9uok6);
  }
  ._1dc46089h {
    padding-right: var(--ht9uok7);
  }
  ._1dc46089l {
    padding-right: var(--ht9uok8);
  }
  ._1dc46089p {
    padding-right: 0;
  }
  ._1dc46089t {
    padding-left: var(--ht9uok0);
  }
  ._1dc46089x {
    padding-left: var(--ht9uok1);
  }
  ._1dc4608a1 {
    padding-left: var(--ht9uok2);
  }
  ._1dc4608a5 {
    padding-left: var(--ht9uok3);
  }
  ._1dc4608a9 {
    padding-left: var(--ht9uok4);
  }
  ._1dc4608ad {
    padding-left: var(--ht9uok5);
  }
  ._1dc4608ah {
    padding-left: var(--ht9uok6);
  }
  ._1dc4608al {
    padding-left: var(--ht9uok7);
  }
  ._1dc4608ap {
    padding-left: var(--ht9uok8);
  }
  ._1dc4608at {
    padding-left: 0;
  }
  ._1dc4608ax {
    margin-top: var(--ht9uok0);
  }
  ._1dc4608b1 {
    margin-top: var(--ht9uok1);
  }
  ._1dc4608b5 {
    margin-top: var(--ht9uok2);
  }
  ._1dc4608b9 {
    margin-top: var(--ht9uok3);
  }
  ._1dc4608bd {
    margin-top: var(--ht9uok4);
  }
  ._1dc4608bh {
    margin-top: var(--ht9uok5);
  }
  ._1dc4608bl {
    margin-top: var(--ht9uok6);
  }
  ._1dc4608bp {
    margin-top: var(--ht9uok7);
  }
  ._1dc4608bt {
    margin-top: var(--ht9uok8);
  }
  ._1dc4608bx {
    margin-top: 0;
  }
  ._1dc4608c1 {
    margin-bottom: var(--ht9uok0);
  }
  ._1dc4608c5 {
    margin-bottom: var(--ht9uok1);
  }
  ._1dc4608c9 {
    margin-bottom: var(--ht9uok2);
  }
  ._1dc4608cd {
    margin-bottom: var(--ht9uok3);
  }
  ._1dc4608ch {
    margin-bottom: var(--ht9uok4);
  }
  ._1dc4608cl {
    margin-bottom: var(--ht9uok5);
  }
  ._1dc4608cp {
    margin-bottom: var(--ht9uok6);
  }
  ._1dc4608ct {
    margin-bottom: var(--ht9uok7);
  }
  ._1dc4608cx {
    margin-bottom: var(--ht9uok8);
  }
  ._1dc4608d1 {
    margin-bottom: 0;
  }
  ._1dc4608d5 {
    margin-right: var(--ht9uok0);
  }
  ._1dc4608d9 {
    margin-right: var(--ht9uok1);
  }
  ._1dc4608dd {
    margin-right: var(--ht9uok2);
  }
  ._1dc4608dh {
    margin-right: var(--ht9uok3);
  }
  ._1dc4608dl {
    margin-right: var(--ht9uok4);
  }
  ._1dc4608dp {
    margin-right: var(--ht9uok5);
  }
  ._1dc4608dt {
    margin-right: var(--ht9uok6);
  }
  ._1dc4608dx {
    margin-right: var(--ht9uok7);
  }
  ._1dc4608e1 {
    margin-right: var(--ht9uok8);
  }
  ._1dc4608e5 {
    margin-right: 0;
  }
  ._1dc4608e9 {
    margin-left: var(--ht9uok0);
  }
  ._1dc4608ed {
    margin-left: var(--ht9uok1);
  }
  ._1dc4608eh {
    margin-left: var(--ht9uok2);
  }
  ._1dc4608el {
    margin-left: var(--ht9uok3);
  }
  ._1dc4608ep {
    margin-left: var(--ht9uok4);
  }
  ._1dc4608et {
    margin-left: var(--ht9uok5);
  }
  ._1dc4608ex {
    margin-left: var(--ht9uok6);
  }
  ._1dc4608f1 {
    margin-left: var(--ht9uok7);
  }
  ._1dc4608f5 {
    margin-left: var(--ht9uok8);
  }
  ._1dc4608f9 {
    margin-left: 0;
  }
  ._1dc4608fd {
    align-items: flex-start;
  }
  ._1dc4608fh {
    align-items: center;
  }
  ._1dc4608fl {
    align-items: flex-end;
  }
  ._1dc4608fp {
    justify-content: flex-start;
  }
  ._1dc4608ft {
    justify-content: center;
  }
  ._1dc4608fx {
    justify-content: flex-end;
  }
  ._1dc4608g1 {
    justify-content: space-between;
  }
  ._1dc4608g5 {
    flex-direction: row;
  }
  ._1dc4608g9 {
    flex-direction: row-reverse;
  }
  ._1dc4608gd {
    flex-direction: column;
  }
  ._1dc4608gh {
    flex-direction: column-reverse;
  }
  ._1dc4608gl {
    flex-wrap: wrap;
  }
  ._1dc4608gp {
    flex-wrap: nowrap;
  }
  ._1dc4608gt {
    flex-shrink: 0;
  }
  ._1dc4608gx {
    flex-grow: 0;
  }
  ._1dc4608h1 {
    flex-grow: 1;
  }
  ._1dc4608h5 {
    text-align: left;
  }
  ._1dc4608h9 {
    text-align: center;
  }
  ._1dc4608hd {
    text-align: right;
  }
}
.mowtpn4 {
  font-size: var(--mowtpn0);
  line-height: var(--mowtpn1);
}
.mowtpn4:before {
  content: "";
  display: table;
  margin-bottom: var(--mowtpn2);
}
.mowtpn4:after {
  content: "";
  display: table;
  margin-top: var(--mowtpn3);
}
._1x7p1y0 {
  font-family: var(--ht9uok2w);
}
._1x7p1y1 {
  font-weight: var(--ht9uok46);
}
._1x7p1y2 {
  font-weight: var(--ht9uok47);
}
._1x7p1y3 {
  font-weight: var(--ht9uok48);
}
._1x7p1y4 {
  --mowtpn0: var(--ht9uok32);
  --mowtpn1: var(--ht9uok33);
  --mowtpn2: var(--ht9uok35);
  --mowtpn3: var(--ht9uok36);
}
._1x7p1y7 {
  --mowtpn0: var(--ht9uok3c);
  --mowtpn1: var(--ht9uok3d);
  --mowtpn2: var(--ht9uok3f);
  --mowtpn3: var(--ht9uok3g);
}
._1x7p1ya {
  --mowtpn0: var(--ht9uok3m);
  --mowtpn1: var(--ht9uok3n);
  --mowtpn2: var(--ht9uok3p);
  --mowtpn3: var(--ht9uok3q);
}
._1x7p1yd {
  --mowtpn0: var(--ht9uok3w);
  --mowtpn1: var(--ht9uok3x);
  --mowtpn2: var(--ht9uok3z);
  --mowtpn3: var(--ht9uok40);
}
._1x7p1yg {
  font-size: var(--ht9uok32);
  line-height: var(--ht9uok33);
}
._1x7p1yh {
  font-size: var(--ht9uok3c);
  line-height: var(--ht9uok3d);
}
._1x7p1yi {
  font-size: var(--ht9uok3m);
  line-height: var(--ht9uok3n);
}
._1x7p1yj {
  font-size: var(--ht9uok3w);
  line-height: var(--ht9uok3x);
}
._1x7p1yk {
  font-weight: var(--ht9uok5d);
}
._1x7p1yl {
  font-weight: var(--ht9uok5e);
}
._1x7p1ym {
  --mowtpn0: var(--ht9uok49);
  --mowtpn1: var(--ht9uok4a);
  --mowtpn2: var(--ht9uok4c);
  --mowtpn3: var(--ht9uok4d);
}
._1x7p1yp {
  --mowtpn0: var(--ht9uok4j);
  --mowtpn1: var(--ht9uok4k);
  --mowtpn2: var(--ht9uok4m);
  --mowtpn3: var(--ht9uok4n);
}
._1x7p1ys {
  --mowtpn0: var(--ht9uok4t);
  --mowtpn1: var(--ht9uok4u);
  --mowtpn2: var(--ht9uok4w);
  --mowtpn3: var(--ht9uok4x);
}
._1x7p1yv {
  --mowtpn0: var(--ht9uok53);
  --mowtpn1: var(--ht9uok54);
  --mowtpn2: var(--ht9uok56);
  --mowtpn3: var(--ht9uok57);
}
html:not(._1dc4608z) ._1x7p1y18 {
  --_1x7p1yy: var(--ht9uok19);
  --_1x7p1yz: var(--ht9uok17);
  --_1x7p1y10: var(--ht9uok1d);
  --_1x7p1y11: var(--ht9uok1o);
  --_1x7p1y12: var(--ht9uok1m);
  --_1x7p1y13: var(--ht9uok15);
  --_1x7p1y14: var(--ht9uok1b);
  --_1x7p1y15: var(--ht9uok1k);
  --_1x7p1y16: var(--ht9uok1r);
  --_1x7p1y17: var(--ht9uok1f);
}
html:not(._1dc4608z) ._1x7p1y19 {
  --_1x7p1yy: var(--ht9uok1a);
  --_1x7p1yz: var(--ht9uok18);
  --_1x7p1y10: var(--ht9uok1e);
  --_1x7p1y11: var(--ht9uok1p);
  --_1x7p1y12: var(--ht9uok1n);
  --_1x7p1y13: var(--ht9uok16);
  --_1x7p1y14: var(--ht9uok1c);
  --_1x7p1y15: var(--ht9uok1l);
  --_1x7p1y16: var(--ht9uok1s);
  --_1x7p1y17: var(--ht9uok1h);
}
html._1dc4608z ._1x7p1y1a {
  --_1x7p1yy: var(--ht9uok19);
  --_1x7p1yz: var(--ht9uok17);
  --_1x7p1y10: var(--ht9uok1d);
  --_1x7p1y11: var(--ht9uok1o);
  --_1x7p1y12: var(--ht9uok1m);
  --_1x7p1y13: var(--ht9uok15);
  --_1x7p1y14: var(--ht9uok1b);
  --_1x7p1y15: var(--ht9uok1k);
  --_1x7p1y16: var(--ht9uok1r);
  --_1x7p1y17: var(--ht9uok1f);
}
html._1dc4608z ._1x7p1y1b {
  --_1x7p1yy: var(--ht9uok1a);
  --_1x7p1yz: var(--ht9uok18);
  --_1x7p1y10: var(--ht9uok1e);
  --_1x7p1y11: var(--ht9uok1p);
  --_1x7p1y12: var(--ht9uok1n);
  --_1x7p1y13: var(--ht9uok16);
  --_1x7p1y14: var(--ht9uok1c);
  --_1x7p1y15: var(--ht9uok1l);
  --_1x7p1y16: var(--ht9uok1s);
  --_1x7p1y17: var(--ht9uok1h);
}
html:not(._1dc4608z) ._1x7p1y1c,
html:not(._1dc4608z) ._1x7p1y1d,
html:not(._1dc4608z) ._1x7p1y1e,
html:not(._1dc4608z) ._1x7p1y1f {
  --_1x7p1y15: var(--_1x7p1yy);
}
html:not(._1dc4608z) ._1x7p1y1g,
html:not(._1dc4608z) ._1x7p1y1h {
  --_1x7p1y15: var(--_1x7p1yz);
}
html:not(._1dc4608z) ._1x7p1y1i {
  --_1x7p1y15: var(--_1x7p1y12);
}
html:not(._1dc4608z) ._1x7p1y1j {
  --_1x7p1y15: var(--_1x7p1y10);
}
html:not(._1dc4608z) ._1x7p1y1k {
  --_1x7p1y15: var(--_1x7p1y11);
}
html._1dc4608z ._1x7p1y1l,
html._1dc4608z ._1x7p1y1m,
html._1dc4608z ._1x7p1y1n,
html._1dc4608z ._1x7p1y1o {
  --_1x7p1y15: var(--_1x7p1yy);
}
html._1dc4608z ._1x7p1y1p,
html._1dc4608z ._1x7p1y1q {
  --_1x7p1y15: var(--_1x7p1yz);
}
html._1dc4608z ._1x7p1y1r {
  --_1x7p1y15: var(--_1x7p1y12);
}
html._1dc4608z ._1x7p1y1s {
  --_1x7p1y15: var(--_1x7p1y10);
}
html._1dc4608z ._1x7p1y1t {
  --_1x7p1y15: var(--_1x7p1y11);
}
._1x7p1y1u {
  color: var(--_1x7p1yy);
}
._1x7p1y1v {
  color: var(--_1x7p1yz);
}
._1x7p1y1w {
  color: var(--_1x7p1y10);
}
._1x7p1y1x {
  color: var(--_1x7p1y11);
}
._1x7p1y1y {
  color: var(--_1x7p1y12);
}
._1x7p1y1z {
  color: var(--_1x7p1y13);
}
._1x7p1y20 {
  color: var(--_1x7p1y14);
}
._1x7p1y21 {
  color: var(--_1x7p1y15);
}
._1x7p1y22 {
  color: var(--_1x7p1y16);
}
._1x7p1y23 {
  color: var(--_1x7p1y17);
}
._1x7p1y24 {
  padding-bottom: calc((var(--ht9uok9) - var(--ht9uok33)) / 2);
  padding-top: calc((var(--ht9uok9) - var(--ht9uok33)) / 2);
}
._1x7p1y25 {
  padding-bottom: calc((var(--ht9uok9) - var(--ht9uok3d)) / 2);
  padding-top: calc((var(--ht9uok9) - var(--ht9uok3d)) / 2);
}
._1x7p1y26 {
  padding-bottom: calc((var(--ht9uok9) - var(--ht9uok3n)) / 2);
  padding-top: calc((var(--ht9uok9) - var(--ht9uok3n)) / 2);
}
._1x7p1y27 {
  padding-bottom: calc((var(--ht9uok9) - var(--ht9uok3x)) / 2);
  padding-top: calc((var(--ht9uok9) - var(--ht9uok3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1x7p1y4 {
    --mowtpn0: var(--ht9uok37);
    --mowtpn1: var(--ht9uok38);
    --mowtpn2: var(--ht9uok3a);
    --mowtpn3: var(--ht9uok3b);
  }
  ._1x7p1y7 {
    --mowtpn0: var(--ht9uok3h);
    --mowtpn1: var(--ht9uok3i);
    --mowtpn2: var(--ht9uok3k);
    --mowtpn3: var(--ht9uok3l);
  }
  ._1x7p1ya {
    --mowtpn0: var(--ht9uok3r);
    --mowtpn1: var(--ht9uok3s);
    --mowtpn2: var(--ht9uok3u);
    --mowtpn3: var(--ht9uok3v);
  }
  ._1x7p1yd {
    --mowtpn0: var(--ht9uok41);
    --mowtpn1: var(--ht9uok42);
    --mowtpn2: var(--ht9uok44);
    --mowtpn3: var(--ht9uok45);
  }
  ._1x7p1yg {
    font-size: var(--ht9uok37);
    line-height: var(--ht9uok38);
  }
  ._1x7p1yh {
    font-size: var(--ht9uok3h);
    line-height: var(--ht9uok3i);
  }
  ._1x7p1yi {
    font-size: var(--ht9uok3r);
    line-height: var(--ht9uok3s);
  }
  ._1x7p1yj {
    font-size: var(--ht9uok41);
    line-height: var(--ht9uok42);
  }
  ._1x7p1ym {
    --mowtpn0: var(--ht9uok4e);
    --mowtpn1: var(--ht9uok4f);
    --mowtpn2: var(--ht9uok4h);
    --mowtpn3: var(--ht9uok4i);
  }
  ._1x7p1yp {
    --mowtpn0: var(--ht9uok4o);
    --mowtpn1: var(--ht9uok4p);
    --mowtpn2: var(--ht9uok4r);
    --mowtpn3: var(--ht9uok4s);
  }
  ._1x7p1ys {
    --mowtpn0: var(--ht9uok4y);
    --mowtpn1: var(--ht9uok4z);
    --mowtpn2: var(--ht9uok51);
    --mowtpn3: var(--ht9uok52);
  }
  ._1x7p1yv {
    --mowtpn0: var(--ht9uok58);
    --mowtpn1: var(--ht9uok59);
    --mowtpn2: var(--ht9uok5b);
    --mowtpn3: var(--ht9uok5c);
  }
  ._1x7p1y24 {
    padding-bottom: calc((var(--ht9uok9) - var(--ht9uok38)) / 2);
    padding-top: calc((var(--ht9uok9) - var(--ht9uok38)) / 2);
  }
  ._1x7p1y25 {
    padding-bottom: calc((var(--ht9uok9) - var(--ht9uok3i)) / 2);
    padding-top: calc((var(--ht9uok9) - var(--ht9uok3i)) / 2);
  }
  ._1x7p1y26 {
    padding-bottom: calc((var(--ht9uok9) - var(--ht9uok3s)) / 2);
    padding-top: calc((var(--ht9uok9) - var(--ht9uok3s)) / 2);
  }
  ._1x7p1y27 {
    padding-bottom: calc((var(--ht9uok9) - var(--ht9uok42)) / 2);
    padding-top: calc((var(--ht9uok9) - var(--ht9uok42)) / 2);
  }
}
.a7gyu20 {
  --ht9uok0: 24px;
  --ht9uok1: 4px;
  --ht9uok2: 8px;
  --ht9uok3: 12px;
  --ht9uok4: 20px;
  --ht9uok5: 32px;
  --ht9uok6: 48px;
  --ht9uok7: 96px;
  --ht9uok8: 120px;
  --ht9uok9: 44px;
  --ht9uoka: 4px;
  --ht9uokb: 2px;
  --ht9uokc: 4px;
  --ht9uokd: 6px;
  --ht9uoke: 10px;
  --ht9uokf: #e60278;
  --ht9uokg: #f8b1dc;
  --ht9uokh: #fdc221;
  --ht9uoki: #fee384;
  --ht9uokj: #b91e1e;
  --ht9uokk: #fb999a;
  --ht9uokl: #838fa5;
  --ht9uokm: rgba(159, 176, 245, 0.7);
  --ht9uokn: #4964e9;
  --ht9uoko: #9fb0f5;
  --ht9uokp: #1d559d;
  --ht9uokq: #98c9f1;
  --ht9uokr: #2e3849;
  --ht9uokt: #d2d7df;
  --ht9uoks: #fff;
  --ht9uoku: #12784f;
  --ht9uokv: #8bdec5;
  --ht9uokw: #512eaa;
  --ht9uokx: #c6acf5;
  --ht9uoky: 1px;
  --ht9uokz: 2px;
  --ht9uok10: 3px;
  --ht9uok11: 400px;
  --ht9uok12: 660px;
  --ht9uok13: 940px;
  --ht9uok14: 1280px;
  --ht9uok15: #e60278;
  --ht9uok16: #f8b1dc;
  --ht9uok17: #723d02;
  --ht9uok18: #fee384;
  --ht9uok19: #b91e1e;
  --ht9uok1a: #fb999a;
  --ht9uok1b: #4964e9;
  --ht9uok1c: #9fb0f5;
  --ht9uok1d: #1d559d;
  --ht9uok1e: #98c9f1;
  --ht9uok1f: #4964e9;
  --ht9uok1h: #9fb0f5;
  --ht9uok1g: #4964e9;
  --ht9uok1i: #512eaa;
  --ht9uok1j: #c6acf5;
  --ht9uok1k: #2e3849;
  --ht9uok1l: #fff;
  --ht9uok1m: #12784f;
  --ht9uok1n: #8bdec5;
  --ht9uok1o: #512eaa;
  --ht9uok1p: #c6acf5;
  --ht9uok1q: #f57c00;
  --ht9uok1r: #5a6881;
  --ht9uok1s: hsla(0, 0%, 100%, 0.65);
  --ht9uok1t: #f7f8fb;
  --ht9uok1u: #0e131b;
  --ht9uok1v: #0d3880;
  --ht9uok1w: #e60278;
  --ht9uok1x: #cd026b;
  --ht9uok1y: #fd0585;
  --ht9uok1z: #feeffa;
  --ht9uok20: #fdd7f3;
  --ht9uok21: #fde3f6;
  --ht9uok22: #fdc221;
  --ht9uok23: #fef8de;
  --ht9uok24: #b91e1e;
  --ht9uok25: #a31a1a;
  --ht9uok26: #db1616;
  --ht9uok27: #ffe3e2;
  --ht9uok28: #fef3f3;
  --ht9uok29: #fcdbdb;
  --ht9uok2a: #fde7e7;
  --ht9uok2b: #4964e9;
  --ht9uok2c: #3251e6;
  --ht9uok2d: #5975ff;
  --ht9uok2e: #f4f6fe;
  --ht9uok2f: #dde3fc;
  --ht9uok2g: #e8ecfd;
  --ht9uok2h: #1d559d;
  --ht9uok2i: #e3f2fb;
  --ht9uok2j: #2e3849;
  --ht9uok2k: #242c39;
  --ht9uok2l: #384459;
  --ht9uok2m: #eaecf1;
  --ht9uok2n: #f7f8fb;
  --ht9uok2o: #e6e9f3;
  --ht9uok2p: #eff1f7;
  --ht9uok2q: #12784f;
  --ht9uok2r: #e2f7f1;
  --ht9uok2s: #512eaa;
  --ht9uok2t: #f1e8fd;
  --ht9uok2u: #fff;
  --ht9uok2v: #1c2330;
  --ht9uok2w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --ht9uok2x: 1456;
  --ht9uok2y: 1900;
  --ht9uok2z: -500;
  --ht9uok30: 0;
  --ht9uok31: 2048;
  --ht9uok32: 12px;
  --ht9uok33: 20px;
  --ht9uok34: 8.5313px;
  --ht9uok35: -0.4642em;
  --ht9uok36: -0.4915em;
  --ht9uok37: 12px;
  --ht9uok38: 20px;
  --ht9uok39: 8.5313px;
  --ht9uok3a: -0.4642em;
  --ht9uok3b: -0.4915em;
  --ht9uok3c: 14px;
  --ht9uok3d: 20px;
  --ht9uok3e: 9.9531px;
  --ht9uok3f: -0.3451em;
  --ht9uok3g: -0.3725em;
  --ht9uok3h: 14px;
  --ht9uok3i: 20px;
  --ht9uok3j: 9.9531px;
  --ht9uok3k: -0.3451em;
  --ht9uok3l: -0.3725em;
  --ht9uok3m: 16px;
  --ht9uok3n: 24px;
  --ht9uok3o: 11.375px;
  --ht9uok3p: -0.3809em;
  --ht9uok3q: -0.4082em;
  --ht9uok3r: 16px;
  --ht9uok3s: 24px;
  --ht9uok3t: 11.375px;
  --ht9uok3u: -0.3809em;
  --ht9uok3v: -0.4082em;
  --ht9uok3w: 18px;
  --ht9uok3x: 28px;
  --ht9uok3y: 12.7969px;
  --ht9uok3z: -0.4086em;
  --ht9uok40: -0.436em;
  --ht9uok41: 18px;
  --ht9uok42: 28px;
  --ht9uok43: 12.7969px;
  --ht9uok44: -0.4086em;
  --ht9uok45: -0.436em;
  --ht9uok46: 400;
  --ht9uok47: 600;
  --ht9uok48: 700;
  --ht9uok49: 28px;
  --ht9uok4a: 36px;
  --ht9uok4b: 19.9063px;
  --ht9uok4c: -0.2737em;
  --ht9uok4d: -0.3011em;
  --ht9uok4e: 42px;
  --ht9uok4f: 44px;
  --ht9uok4g: 29.8594px;
  --ht9uok4h: -0.1547em;
  --ht9uok4i: -0.182em;
  --ht9uok4j: 21px;
  --ht9uok4k: 32px;
  --ht9uok4l: 14.9297px;
  --ht9uok4m: -0.3928em;
  --ht9uok4n: -0.4201em;
  --ht9uok4o: 28px;
  --ht9uok4p: 36px;
  --ht9uok4q: 19.9063px;
  --ht9uok4r: -0.2737em;
  --ht9uok4s: -0.3011em;
  --ht9uok4t: 21px;
  --ht9uok4u: 28px;
  --ht9uok4v: 14.9297px;
  --ht9uok4w: -0.2975em;
  --ht9uok4x: -0.3249em;
  --ht9uok4y: 21px;
  --ht9uok4z: 28px;
  --ht9uok50: 14.9297px;
  --ht9uok51: -0.2975em;
  --ht9uok52: -0.3249em;
  --ht9uok53: 18px;
  --ht9uok54: 28px;
  --ht9uok55: 12.7969px;
  --ht9uok56: -0.4086em;
  --ht9uok57: -0.436em;
  --ht9uok58: 18px;
  --ht9uok59: 28px;
  --ht9uok5a: 12.7969px;
  --ht9uok5b: -0.4086em;
  --ht9uok5c: -0.436em;
  --ht9uok5d: 400;
  --ht9uok5e: 600;
  --ht9uok5f: none;
  --ht9uok5g: 24px;
  --ht9uok5h: 20px;
  --ht9uok5i: transform 0.125s ease, opacity 0.125s ease;
  --ht9uok5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --ht9uok5k: scale(0.95);
  --ht9uok5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --ht9uok5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --ht9uok5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._1fxgzmt6 {
  background: var(--_1fxgzmt0);
}
._1fxgzmt7 {
  background: var(--_1fxgzmt1);
}
._1fxgzmt8 {
  background: var(--_1fxgzmt2);
}
._1fxgzmt9 {
  background: var(--_1fxgzmt3);
}
._1fxgzmta {
  background: var(--_1fxgzmt4);
}
._1fxgzmtb {
  background: var(--_1fxgzmt5);
}
html:not(._1dc4608z) ._1fxgzmtc {
  --_1fxgzmt0: var(--ht9uokw);
  --_1fxgzmt1: var(--ht9uokp);
  --_1fxgzmt2: var(--ht9uoku);
  --_1fxgzmt3: var(--ht9uokh);
  --_1fxgzmt4: var(--ht9uokj);
  --_1fxgzmt5: var(--ht9uokn);
}
html:not(._1dc4608z) ._1fxgzmtd {
  --_1fxgzmt0: var(--ht9uokx);
  --_1fxgzmt1: var(--ht9uokq);
  --_1fxgzmt2: var(--ht9uokv);
  --_1fxgzmt3: var(--ht9uoki);
  --_1fxgzmt4: var(--ht9uokk);
  --_1fxgzmt5: var(--ht9uoko);
}
html._1dc4608z ._1fxgzmte {
  --_1fxgzmt0: var(--ht9uokw);
  --_1fxgzmt1: var(--ht9uokp);
  --_1fxgzmt2: var(--ht9uoku);
  --_1fxgzmt3: var(--ht9uokh);
  --_1fxgzmt4: var(--ht9uokj);
  --_1fxgzmt5: var(--ht9uokn);
}
html._1dc4608z ._1fxgzmtf {
  --_1fxgzmt0: var(--ht9uokx);
  --_1fxgzmt1: var(--ht9uokq);
  --_1fxgzmt2: var(--ht9uokv);
  --_1fxgzmt3: var(--ht9uoki);
  --_1fxgzmt4: var(--ht9uokk);
  --_1fxgzmt5: var(--ht9uoko);
}
._1fxgzmtg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1fxgzmth {
  width: var(--ht9uoke);
}
._1fxgzmti {
  width: var(--ht9uoka);
}
._1dbbjgz0 {
  margin-bottom: -0.1em;
}
._1dbbjgz2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1dbbjgz0 ._1dbbjgz2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1dbbjgz4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_1dbbjgz3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__1dc4608z,html.sprinkles_darkMode__1dc4608z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__a7gyu20 typography_lightModeTone_light__1x7p1y18 typography_darkModeTone_dark__1x7p1y1b">
+        <div class="reset_base__1m61nqo0 sprinkles_paddingBottom_gutter_mobile__1dc46087i sprinkles_paddingTop_gutter_mobile__1dc46086e sprinkles_paddingLeft_gutter_mobile__1dc46089q sprinkles_paddingRight_gutter_mobile__1dc46088m sprinkles_position_relative_mobile__1dc46085e typography_lightModeTone_light__1x7p1y18 typography_darkModeTone_dark__1x7p1y1b sprinkles_background_surface_lightMode__1dc460832 sprinkles_background_surfaceDark_darkMode__1dc460835">
+          <span class="reset_base__1m61nqo0 sprinkles_display_block_mobile__1dc46084y typography_fontFamily__1x7p1y0 typography_fontWeight_regular__1x7p1y1 typography_tone_neutral__1x7p1y21 capsize_capsizeStyle__mowtpn4 typography_textSize_large__1x7p1yd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
